# libstrophe

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile.am  README.txt  bootstrap.sh  strophe.h
cmake/: ConfigureBuild.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt  auth.c  common.h  conn.c
